Changes for Zookeepr
====================

0.1.10 (bzr)
------

 * Added ability for reviews to be edited. (bug #6)
 * Put proposal ID in the review list. (bug #32)
 * Put proposal ID in the review page. (bug #31)
 * Redirect to unreviewed proposal list after a successful review. (bug #33)

0.1.9
-----

 * Refactored good_errors mangling out of controllers and into BaseSchema.
 * Worked around Query.get() problem on the live site when retrieving
   the signed in user.
 * Hacked around some ugliness in the wiki controller, theme changes, and
   added code to allow embedding of wiki page content in other templates.

0.1.8.2
-------

 * Converted data model to use SQLAlchemy's threadlocal plugin, to fix
   random objectstore session problems.

0.1.8.1
-------

 * Worked around proposal URLs without a scheme, bruteforcing them to http://
 * Updated dependency on WebHelpers to get better URL auto link behaviour.

0.1.8
-----

 * Review interface tweaks:
  * Review list shows only your own reviews
  * Proposal list shows only unreviewed proposals
  * Reviewers can only review a proposal once
 * Fixed a bug with proposal edit/view when angle brackets were used in
   the proposal content.  Thanks "Follower".
 * The pretty Internal Server Error page has been re-enabled.
 * We now 404 correctly on nonexistent objects, instead of 500ing during
   test for nonexistent objects :)

0.1.7
-----

 * Review interface tweaks.

0.1.6
-----

 * Better wiki support via paster setup-app.

0.1.5
-----

 * Wiki integration thanks to Michael Kedzierski.
 * Support for signing up for an account without needing to go through the
   CFP.